resoponsive design added

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                 <li><a class="main-nav-link nav-cta" href="#cta">Try for free</a></li>
             </ul>
         </nav>
-        <!-- <button class="btn-mobile-nav">
+        <button class="btn-mobile-nav">
             <ion-icon class="icon-mobile-nav md hydrated" name="menu-outline" role="img"></ion-icon>
             <ion-icon class="icon-mobile-nav md hydrated" name="close-outline" role="img"></ion-icon>
-        </button> -->
+        </button>
     </header>
 
     <main>
