--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="Cnefood is a premium food delivery service with the mission to bring affordable and healthy meals to as many people as possible. ">
-    <meta name="keywords" content="food delivery, healthy meals, affordable">
+    <meta name="keywords" content="food delivery, healthy meals, affordable, cause and effect, ganesh arwat">
     <meta name="author" content="Cnefood">
 
     <link rel="stylesheet" href="css/style.css" />
@@ -49,7 +49,7 @@
             <div class="hero">
                 <div class="hero_content">
                     <h1 class="heading-primary">
-                        A healthy meal delivered to your door, every single day
+                        A healthy meal delivered to your door, <br> every single day
                     </h1>
                     <p class="hero-description">
                         The smart 365-days-per-year food subscription that will make you eat healthy again. Tailored to
